--- a/Blank Site/NLC.html
+++ b/Blank Site/NLC.html
@@ -123,16 +123,40 @@
 		</div>
 	</div>
 
+
+ <!--********** service **********-->
+
 	<div class="service">
+		<h1>Recent Services</h1>
+
+		<div class>
 		<img src="style/images/worship.jpg" alt="">
-		
+		</div>
 	</div>
 
 
+ <!--********** updates **********-->
+
 	<div class="update">
+		<h1>Recent Updates</h1>
+
+		<dl>
+			<dt>filter by:</dt>
+			<dd><a href="#">ALL</a></dd>
+			<dd><a href="#">CWY</a></dd>
+			<dd><a href="#">HBS</a></dd>
+			<dd><a href="#">FSM</a></dd>
+			<dd><a href="#">GLR</a></dd>
+			<dd><a href="#">CBT</a></dd>
+			<dd><a href="#">HTS</a></dd>
+
+		</dl>
+
 		<img src="style/images/footerback.png" alt="">
 
 	</div>
+
+ <!--********** footer **********-->
 
 	<div>
 		<footer>
