--- a/Blank Site/NLC.html
+++ b/Blank Site/NLC.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <link href='http://fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style/css/reset.css">
-  <link rel="stylesheet" href="style/css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="wrap" >
