Looking at the form
Cant get the boxes to move in the first place. :(

--- a/Blank Site/NLC.html
+++ b/Blank Site/NLC.html
@@ -8,18 +8,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="wrap" >
+<div class="wrap">
 
  <!--********** form **********-->
 
 
-	<form class="form" action="#" method="post">
+	<form class="form" class="group" action="#" method="post">
 			
 		<h1> Contact us.</h1>
 
 		<p>name</p>
 
-		<div class="name" class"clearfix">
+		<div class="name" class"group">
 			<input id="firstname" name="firstname" type="text" value="first">
 
 			<input id="lastname" name="lastname" type="text" value="last">
@@ -85,7 +85,7 @@
 			
 			
 		<nav class="clearfix">
-			<img src="style/images/logo.png" alt="logo">
+			<img src="style/images/logo.png" alt="logo" id="map">
 
 			<div class="nav" >
 				<ul>
@@ -106,10 +106,10 @@
 
 <!--********** campuse **********-->
 	
-	<div class="main">
-		<div class="local">
-			<img src="style/images/map.jpg" alt="map">
-
+	<div class="main group">
+		<div class="img">
+			<img src="style/images/map.jpg" alt="map" id="map">
+		</div>
 		<div class="dropdown">
 			<ul>
 				<li>Cabot</li>
@@ -120,7 +120,7 @@
 				<li>Hot Springs</li>
 			</ul>
 		</div>
-		</div>
+		
 	</div>
 
 
@@ -129,7 +129,7 @@
 	<div class="service">
 		<h1>Recent Services</h1>
 
-		<div class>
+		<div class"img">
 		<img src="style/images/worship.jpg" alt="">
 		</div>
 	</div>
@@ -149,7 +149,6 @@
 			<dd><a href="#">GLR</a></dd>
 			<dd><a href="#">CBT</a></dd>
 			<dd><a href="#">HTS</a></dd>
-
 		</dl>
 
 		<img src="style/images/footerback.png" alt="">
