--- a/Blank Site/NLC.html
+++ b/Blank Site/NLC.html
@@ -16,11 +16,11 @@
 	<div id="contact">
  		<div class="inner">
 			<form class="form group" action="#" method="post">
-				<div class="connect">
+
 					<h1> Contact us.</h1>
-					<h2> close </h2>
-				</div>
-				<div class="name" class"group">
+					<a href="#">Close</a>
+
+				<div class="name group">
 					<p>name</p>
 					<input id="firstname" name="firstname" type="text" placeholder="first">
 					<input id="lastname" name="lastname" type="text" placeholder="last">
@@ -31,22 +31,18 @@
 					<h2> Your Message</h2>
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
 				</div>
-					<ul class="dropdown">
-						<p>Campus</p>
-	        	<li><a href="#">Select One</a>
-	        		<ul class="sub_menu">
-	      			 <li><a href="#">Cabot</a></li>
-	      			 <li><a href="#">Conway</a></li>
-	      			 <li><a href="#">GLR</a></li>
-	      			 <li><a href="#">Fort Smith</a></li>
-	      			 <li><a href="#">Hot Springs</a></li>
-	      			 <li><a href="#">Heber Springs</a></li>
-	        		</ul>
-	        	</li>
-        	</ul>
-        	<div class="menu" >
-					<input id="submit" type="submit" value="submit">
-				</div>	
+				<!-- <div class="menu"> -->
+					<section  value="campus" name="Campus"> Campus
+						<option value="CWY">Conway</option>
+						<option value="GLR">Greater Little Rock</option>
+						<option value="CBT">Cabot</option>
+						<option value="FSM">Fort Smith</option>
+						<option value="HTS">Hot Springs</option>
+						<option value="HBS">Heber Springs</option>
+					</section>
+
+      		<input class="submit" id="submit" type="submit" value="submit">
+      	<!-- </div> -->
 			</form>
 		</div>
 	</div>
@@ -58,6 +54,8 @@
 	<div id="media">
 		<div class="inner">
 			<div class="social">
+
+
 				<ul class="dropdown">
 	      	<li><a href="#">Select One</a>
 	      		<ul class="sub_menu">
@@ -70,6 +68,8 @@
 	      		</ul>
 	      	</li>
 	    	</ul>
+
+	    	
 				<ul class="logo">
 					<li>Contact us</li>
 					<li>giving</li>
@@ -89,7 +89,11 @@
 		<div class="inner">
 			<header>	
 				<nav class="clearfix">
-					<a href="#"><img src="style/images/logo.png" alt="logo"></a>
+					<h1>
+						<a href="#">New Life Church</a>
+						</a>
+					</h1>
+
 					<div class="nav" >
 						<ul>
 							<li><a href="#" class="selected">Im new here</a></li>
@@ -125,18 +129,25 @@
 			<div class="img">
 				<img src="style/images/map.jpg" alt="map" id="map">
 			</div>
-			<ul class="dropdown">
-      	<li><a href="#">Select One</a>
-      		<ul class="sub_menu">
-    			 <li><a href="#">Cabot</a></li>
-    			 <li><a href="#">Conway</a></li>
-    			 <li><a href="#">GLR</a></li>
-    			 <li><a href="#">Fort Smith</a></li>
-    			 <li><a href="#">Hot Springs</a></li>
-    			 <li><a href="#">Heber Springs</a></li>
-      		</ul>
-      	</li>
-    	</ul>
+			<div class="map">
+				<ul class="dropdown">
+	      	<li><a href="#">Select One</a>
+	      		<ul class="sub_menu">
+	    			 <li><a href="#">Cabot</a></li>
+	    			 <li><a href="#">Conway</a></li>
+	    			 <li><a href="#">GLR</a></li>
+	    			 <li><a href="#">Fort Smith</a></li>
+	    			 <li><a href="#">Hot Springs</a></li>
+	    			 <li><a href="#">Heber Springs</a></li>
+	      		</ul>
+	      	</li>
+	    	</ul>
+    		<p> 633 S. Country Club Ln Conway, AR 72034</p>
+    		<h2>Saturdays 7pm</h2>
+    		<h2>Sunday 10 & 11:45am</h2>
+    		<p> Driving Directions</p>
+    		<p> 501 328-5433</p>
+    	</div>
 		</div>
 	</div>
 	<!--
