--- a/Blank Site/NLC.html
+++ b/Blank Site/NLC.html
@@ -48,14 +48,14 @@
 	</div>
 	<!--
 	******************************
-	 *****   =SOCIAL   *****
+	 *****   =TOP_HEADER  *****
 	******************************
 	-->
-	<div id="media">
+	<div id="top_header" class="group">
 		<div class="inner">
 			<div class="social">
 
-
+				<h2>Campus Select</h2>
 				<ul class="dropdown">
 	      	<li><a href="#">Select One</a>
 	      		<ul class="sub_menu">
@@ -71,18 +71,21 @@
 
 	    	
 				<ul class="logo">
-					<li>Contact us</li>
-					<li>giving</li>
-					<li>theCity</li>
-					<li>Facebook</li>
-					<li>Twitter</li>
+					<li> <a href="#">Contact Us</a></li>
+					<li> <a href="#">Giving</a></li>
+					<li> <a href="#">The City</a></li>
 				</ul>
+				<div class="social_medai">
+					<a href="#">Facebook</a>
+					<a href="#">Twitter</a>
+				</div>
+				
 			</div>
 		</div>
 	</div>
 	<!--
 	******************************
-	 *****   =HEADER_PAGES   *****
+	 *****   =HEADER-PAGES   *****
 	******************************
 	-->
 	<div id="header">	
@@ -114,7 +117,7 @@
 	<div id="live">	
 		<div class="inner">
 			<div class="live">
-				<h2>next online service</h2>
+				<h2> <a href="">next online service</a></h2>
 				<p><a href="#">watch our most recent service now</a></p>
 			</div>
 		</div>
@@ -124,13 +127,13 @@
 	 *****   =CAMPUSES   *****
 	******************************
 	-->
-	<div id="main">
-		<div class="inner group">
+	<div id="main" class="groupd" >
+		<div class="inner">
 			<div class="img">
 				<img src="style/images/map.jpg" alt="map" id="map">
 			</div>
 			<div class="map">
-				<ul class="dropdown">
+				<!-- <ul class="dropdown">
 	      	<li><a href="#">Select One</a>
 	      		<ul class="sub_menu">
 	    			 <li><a href="#">Cabot</a></li>
@@ -141,7 +144,7 @@
 	    			 <li><a href="#">Heber Springs</a></li>
 	      		</ul>
 	      	</li>
-	    	</ul>
+	    	</ul> -->
     		<p> 633 S. Country Club Ln Conway, AR 72034</p>
     		<h2>Saturdays 7pm</h2>
     		<h2>Sunday 10 & 11:45am</h2>
@@ -155,11 +158,24 @@
 	 *****   =SERVICES   *****
 	******************************
 	-->
-	<div id="service">
+	<div id="service" class="group">
 		<div class="inner">
 			<div class"worship">
 				<h1>Recent Services</h1>
+				<a href="#">Watch Older Services</a>
 				<img src="style/images/worship.jpg" alt="" id="worship">
+			</div>
+			<div class="worship_info">
+				<h2>June 25, 2011</h2>
+				<p>Starving Children In Africa - Y.R. Grandpa</p>
+				<h2>June 25, 2011</h2>
+				<p>Survival of the Fittest - Charles D</p>
+				<h2>June 25, 2011</h2>
+				<p>Dear Sweet Baby Jesus - Ricky Bobby</p>
+				<h2>June 25, 2011</h2>
+				<p>Be Awesome At Everything - Neil Cheesehouse</p>
+				<h2>June 25, 2011</h2>
+				<p>Michael, Row The Boat Ashore - Trad Flksng</p>
 			</div>
 		</div>
 	</div>
@@ -181,9 +197,27 @@
 					<li><a href="#">GLR</a></li>
 					<li><a href="#">CBT</a></li>
 					<li><a href="#">HTS</a></li>
+					<li><a href="#">More Updates</a></li>
 				</ul>
+
+				<div class="img1">
+					<img src="style/images/update_img_01.png" alt="image">
+					<h2>Doctors Needed Desperately</h2>
+					<p>May 22, 2011 - 0 comments</p>
+				</div>
+				<div class="img2">
+					<img src="style/images/update_img_02.jpg" alt="image">
+					<h2>Overlay Elements Excerpts</h2>
+					<p>May 22, 2011 - 18 comments</p>
+				</div>
+				<div class="img3">
+					<img src="style/images/update_img_03.png" alt="image">
+					<h2>Fishermen Needed</h2>
+					<p>May 22, 2011 - 1 comments</p>
+				</div>
+
+
 			</div>
-		<img src="style/images/footerback.png" alt="">
 		</div>
 	</div>
 	<!--
