Still pluggin away at it!
no big changes.

--- a/Blank Site/NLC.html
+++ b/Blank Site/NLC.html
@@ -32,7 +32,7 @@
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
 				</div>
 				<!-- <div class="menu"> -->
-					<section  value="campus" name="Campus"> Campus
+					<section  value="campus" name="Campus">
 						<option value="CWY">Conway</option>
 						<option value="GLR">Greater Little Rock</option>
 						<option value="CBT">Cabot</option>
@@ -75,7 +75,7 @@
 					<li> <a href="#">Giving</a></li>
 					<li> <a href="#">The City</a></li>
 				</ul>
-				<div class="social_medai">
+				<div class="facebook">
 					<a href="#">Facebook</a>
 					<a href="#">Twitter</a>
 				</div>
@@ -94,7 +94,6 @@
 				<nav class="clearfix">
 					<h1>
 						<a href="#">New Life Church</a>
-						</a>
 					</h1>
 
 					<div class="nav" >
@@ -160,7 +159,7 @@
 	-->
 	<div id="service" class="group">
 		<div class="inner">
-			<div class"worship">
+			<div class="worship">
 				<h1>Recent Services</h1>
 				<a href="#">Watch Older Services</a>
 				<img src="style/images/worship.jpg" alt="" id="worship">
