Getting Much Closser
Just working on fine tuning it. started working on some of the text on
this one.

--- a/Blank Site/NLC.html
+++ b/Blank Site/NLC.html
@@ -98,10 +98,11 @@
 
 					<div class="nav" >
 						<ul>
-							<li><a href="#" class="selected">Im new here</a></li>
+							<li><a href="#" class="selected">I'm new here</a></li>
 							<li><a href="#">Ministries</a></li>
 							<li><a href="#">Prayer</a></li>
 							<li><a href="#">Updates</a></li>
+							<li><a href="#">Giving</a></li>
 						</ul>
 					</div>
 				</nav>
@@ -116,7 +117,7 @@
 	<div id="live">	
 		<div class="inner">
 			<div class="live">
-				<h2> <a href="">next online service</a></h2>
+				<h2> <a href="">00 days 12 hours 00 minutes 30 seconds until next online service</a></h2>
 				<p><a href="#">watch our most recent service now</a></p>
 			</div>
 		</div>
@@ -186,18 +187,20 @@
 	<div id="update">
 		<div class="inner">
 			<div class="update">
+				<div class="campus">
 				<h1>Recent Updates</h1>
-				<ul>
-					<li>filter by:</li>
-					<li><a href="#">ALL</a></li>
-					<li><a href="#">CWY</a></li>
-					<li><a href="#">HBS</a></li>
-					<li><a href="#">FSM</a></li>
-					<li><a href="#">GLR</a></li>
-					<li><a href="#">CBT</a></li>
-					<li><a href="#">HTS</a></li>
-					<li><a href="#">More Updates</a></li>
-				</ul>
+					<ul>
+						<li>filter by:</li>
+						<li><a href="#">ALL</a></li>
+						<li><a href="#">CWY</a></li>
+						<li><a href="#">HBS</a></li>
+						<li><a href="#">FSM</a></li>
+						<li><a href="#">GLR</a></li>
+						<li><a href="#">CBT</a></li>
+						<li><a href="#">HTS</a></li>
+					</ul>
+					<a href="#">More Updates</a>
+				</div>
 
 				<div class="img1">
 					<img src="style/images/update_img_01.png" alt="image">
